# node-unix-socket

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: index.test.ts  index.ts  socket.rs  socket.test.ts
test/: echo-cli.test.ts
