[package]
name = "myde-unix-socket"
version = "0.1.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "echo-server"
path = "test/bin/echo_server.rs"

[[bin]]
name = "echo-client"
path = "test/bin/echo_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
nix = { version = "0.27", features = ["fs", "socket", "uio", "poll"] }
libc = "0.2"
